# comp-research-mas

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  세션정리-스킬후보.md
config/: agent_roles.yaml  alert_policy.yaml  competitors.yaml  compressor_types.yaml  exhibition_calendar.yaml  gap_matrix_baseline.yaml  monitors.yaml  rubric.yaml  source_policy.yaml  source_whitelist.yaml
docs/: MAS_SPEC.md  PHASE1_MVP.md  PROJECT_PLAN.md  PROJECT_PLAN_REDEFINED.md  STEP2_SEARCH_AGENT_PLAN.md  STEP5_HERMES_ADAPTER_SPEC.md
examples/manual_search_results/: sample_2026w26.md  step1_raw_data.md
outputs/analysis/: 2025-07_analysis_bundle.json  2025-08_analysis_bundle.json  2025-09_analysis_bundle.json  2025-10_analysis_bundle.json  2025-11_analysis_bundle.json  2025-12_analysis_bundle.json  2026-01_analysis_bundle.json  2026-02_analysis_bundle.json  2026-03_analysis_bundle.json  2026-04_analysis_bundle.json  2026-05_analysis_bundle.json  2026-06_analysis_bundle.json  2026-26_analysis_bundle.json  2026_special_report_summary.json  backfill_gap_summary.json
outputs/evidence/: 2025-07_evidence.json  2025-08_evidence.json  2025-09_evidence.json  2025-10_evidence.json  2025-11_evidence.json  2025-12_evidence.json  2026-01_evidence.json  2026-02_evidence.json  2026-03_evidence.json  2026-04_evidence.json  2026-05_evidence.json  (+3 more)
tests/: test_backfill.py  test_critic_rubric.py  test_phase1.py  test_phase_c_to_i.py  test_report_html.py  test_retrofit.py  test_special_report.py  test_step1_langgraph.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py
(+107 files in other folders)
